--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="sign_up_button">#F7A889</color>
     <color name="training_titile">#FF000000</color>
     <color name="start">#D9D9D9</color>
+    <color name="online">#34C759</color>
 </resources>
